Fixed height issue on mobile in safari

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -31,6 +31,7 @@ body > section[role] {
 
       > div.wrapper {
         padding: 20px 10px 0;
+        height: auto;
       }
     }
   }
